# drug2ways

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .travis.yml  AUTHORS.rst  LICENSE  MANIFEST.in  README.md  setup.cfg  tox.ini
docs/: Makefile
docs/source/: algorithm.rst  api.rst  cli.rst  conf.py  constants.rst  formats.rst  index.rst  installation.rst  performance.rst
examples/: README.md  custom_network_run.sh  example_pathway_analysis.sh  openbiolink_network_run.sh
src/drug2ways/: __init__.py  __main__.py  alternative_graph_traversal.py  bel_helper.py  cli.py  cli_helper.py  constants.py  graph_processing.py  graph_reader.py  graph_traversal.py  pathway.py  permute.py  rcr.py  wrapper.py
tests/: __init__.py  constants.py  test_paths.py  test_rcr.py  test_reader.py
tests/resources/: graph.csv  rcr_graph.csv
