##########################
# Setup.py Configuration #
##########################
[metadata]
name = drug2ways
version = 0.0.10
description = Reasoning over polar paths in biological networks for drug discovery applications
long_description = A Python package for reasoning over large-scale biological networks for drug discovery applications in bioinformatics

# URLs associated with Drug2Ways
url = https://github.com/drug2ways/drug2ways
download_url = https://github.com/drug2ways/drug2ways
project_urls =
    Bug Tracker = https://github.com/drug2ways/drug2ways/issues
    Source Code = https://github.com/drug2ways/drug2ways
    Documentation = https://drug2ways.readthedocs.io

# Author information
author = Daniel Rivas Barragan and Daniel Domingo-Fernández
author_email = daniel.rivas@bsc.es
maintainer = Daniel Rivas Barragan and Daniel Domingo-Fernández
maintainer_email = danieldomingofernandez@hotmail.com

# License Information
license = Apache 2.0 License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Mathematics

keywords =
    Systems Biology
    Networks Biology
    Bioinformatics
    Network Algorithms
    Drug Discovery

[options]
install_requires =
    click
    tqdm
    networkx>=2.4
    pandas
    numpy
    scipy
    statsmodels
    pybel
    pystow

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.5

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
speed =
    mpi4py

[options.entry_points]
console_scripts =
    drug2ways = drug2ways.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = drug2ways

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
